# yaqa-quantization

./: .gitignore  CROSS_HESSIAN_EXPERIMENTS.md  README.md  pyproject.toml
hessian_llama/: README.md  assemble_total_hessian.py  custom_linear_A.py  custom_linear_B.py  data_utils.py  get_hess_llama.py  select_cross_hessian_pairs.py  visualize_cross_coupling.py  visualize_hessian.py
hessian_llama/block_hess_more_3/: cross_pair_strength.csv  cross_pair_type_strength.csv
hessian_llama/cross_block_window1/: cross_pair_strength.csv  cross_pair_type_strength.csv
lib/algo/: cross_ldlq.py
lib/utils/: gptq_data_utils.py  unsafe_import.py
qtip-kernels/: setup.py
quantize_llama/: quantize_cross_hess_llama.py
yaqa_quantization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
