[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []    # no Python packages to install from this repo root

[project]
name = "yaqa-quantization"
version = "0.1.0"
description = "Yet Another Quantization Algorithm — Hessian collection and LLM quantization"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "torch>=2.11.0",
    "transformers>=4.51.0,<5.0",
    "accelerate>=1.6.0",
    "peft>=0.15.1",
    "safetensors>=0.5.3",
    "huggingface-hub>=0.30.1",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    # Data / eval
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "lm-eval>=0.4.4",
    "aqlm>=1.1.7",
    # Numerics
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    # CUDA / training utilities
    "fast-hadamard-transform",
    "pytorch-lightning>=2.5.1",
    # Visualization
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    # Misc
    "tqdm>=4.67.1",
    "glog>=0.3.1",
]


[tool.uv]
# fast-hadamard-transform's setup.py imports torch at metadata-generation time
# so torch must be present in .venv BEFORE uv sync runs.
# setuptools/wheel must be installed separately: --index-url replaces PyPI entirely
# and those packages are not on the PyTorch wheel index.
#
#   uv venv --python 3.12 && source .venv/bin/activate
#   uv pip install setuptools packaging wheel
#   uv pip install "torch>=2.11.0" --index-url https://download.pytorch.org/whl/cu130
#   CUDA_HOME=/usr/local/cuda uv sync --no-build-isolation
#   uv pip install -e ./qtip-kernels --no-build-isolation
#
# no-build-isolation lets fast-hadamard-transform see the torch already in .venv.
no-build-isolation-package = ["fast-hadamard-transform"]

[tool.uv.sources]
fast-hadamard-transform = { git = "https://github.com/Dao-AILab/fast-hadamard-transform.git", tag = "v1.0.4.post1" }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
triton = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
